# muffin-detector

./: .coverage  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.fast  Makefile  README.md  app.py  classifier.py  cloudbuild.yaml  demo.py  deploy.sh  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-minimal.txt  requirements.txt  test_service.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cd-deploy.yml  cd.yml  ci-only.yml  ci.yml  ci.yml.disabled  deploy.yml  deploy.yml.disabled
docs/: CI_CD_PIPELINE.md  GCP_SETUP.md  PROJECT_STRUCTURE.md
scripts/: configure-existing-project.sh  quick-deploy.sh  setup-dev.sh  setup-gcp.sh
src/: __init__.py  classifier.py  main.py
tests/: test_classifier.py  test_classifier_hf.py  test_classifier_old.py.bak  test_main.py
